Replace background color with border. Fixed bug where featured image is not showing

--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,7 @@
   --fuschia: #ff00ff;
   --green: #00cd0e;
   --blue: #0033ed;
+  --dark-gray: #e2e2e2;
 }
 
 /* HTML elements */
